Besteiras do head

--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
   <head>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Site da Associação Atlética de Ciências Exatas e Tecnológicas - UFRB">
+    <meta name="keywords" content="lobo azul, bcet, ufrb, atletica, atletica bcet, atletica universitaria, esporte universitario, liga bcet, liga universitaria">
+    <meta name="author" content="AAABCET">
 
-    <title>Stylish Portfolio - Start Bootstrap Template</title>
+    <title>Associação Atlética de Ciências Exatas e Tecnológicas</title>
+
+    <!-- Favicon -->
+<!--
+    <link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
+  -->
+
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -24,7 +31,7 @@
   </head>
 
   <body id="page-top">
-    <!-- Navigation -->
+    <!-- Menu/Navegação -->
     <a class="menu-toggle rounded" href="#">
       <i class="fa fa-bars"></i>
     </a>
@@ -205,10 +212,12 @@
         <a href="#" class="btn btn-xl btn-dark">Look at Me!</a>
       </div>
     </section>
+
     <!-- Rodape -->
     <footer class="footer">
       <div class="container text-center">
         <ul class="list-inline mb-5">
+          <!-- Social -->
           <li class="list-inline-item">
             <a class="social-link rounded-circle text-white mr-3" href="https://www.facebook.com/LobosDeBCET/" target="_blank">
               <i class="icon-social-facebook"></i>
@@ -225,11 +234,12 @@
             </a>
           </li>
         </ul>
+        <!--  Copyright  -->
         <p class="text-muted small mb-0">Copyright &copy; AAABCET - Todos os direitos reservados</p>
+        <!--  Creditos  -->
         <p style="padding-top: 5px;" class="text-muted small mb-0" >Desenvolvido por <a href="https://ageufrb.com/#lista" target="_blank">Debug</a></p>
       </div>
     </footer>
-
 
     <!-- Scroll to Top Button-->
     <a class="scroll-to-top rounded js-scroll-trigger" href="#page-top">
