--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 
 
     <!-- Bootstrap Core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 
-    <!-- Custom Fonts -->
+    <!-- Fonts Customizadas -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
 
-    <!-- Custom CSS -->
-    <link href="css/stylish-portfolio.min.css" rel="stylesheet">
+    <!-- CSS Customizado -->
+    <link href="css/stylish-portfolio.css" rel="stylesheet">
 
   </head>
 
@@ -207,9 +207,13 @@
 
     <section class="content-section bg-primary text-white">
       <div class="container text-center">
-        <h2 class="mb-4">The buttons below are impossible to resist...</h2>
+        <h2 class="mb-4">Eventos</h2>
+          <p>Texto</br>Texto</br>Texto</br>Texto</br>Texto</br>Texto</br></p>
+
+        <!--
         <a href="#" class="btn btn-xl btn-light mr-4">Click Me!</a>
         <a href="#" class="btn btn-xl btn-dark">Look at Me!</a>
+      -->
       </div>
     </section>
 
