--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
           <a class="js-scroll-trigger" href="#page-top">Inicio</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#fazer">Quem Somos</a>
+          <a class="js-scroll-trigger" href="#">Quem Somos</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#about">Inscrição</a>
+          <a class="js-scroll-trigger" href="#inscricao">Inscrição</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#services">Esportes</a>
+          <a class="js-scroll-trigger" href="#esportes">Esportes</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#portfolio">Produtos</a>
+          <a class="js-scroll-trigger" href="#produtos">Produtos</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#fazer">Ranking</a>
+          <a class="js-scroll-trigger" href="#">Ranking</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#fazer">Eventos</a>
+          <a class="js-scroll-trigger" href="#eventos">Eventos</a>
         </li>
       </ul>
     </nav>
@@ -77,7 +77,7 @@
     </header>
 
 
-    <section class="content-section bg-light" id="about">
+    <section class="content-section bg-light" id="inscricao">
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-10 mx-auto">
@@ -91,7 +91,7 @@
     </section>
 
 
-    <section class="content-section bg-primary text-white text-center" id="services">
+    <section class="content-section bg-primary text-white text-center" id="esportes">
       <div class="container">
         <div class="content-section-heading">
           <h3 class="text-secondary mb-0">Services</h3>
@@ -150,7 +150,7 @@
       </div>
     </section>
 
-    <section class="content-section" id="portfolio">
+    <section class="content-section" id="produtos">
       <div class="container">
         <div class="content-section-heading text-center">
           <h3 class="text-secondary mb-0">Portfolio</h3>
@@ -205,10 +205,10 @@
       </div>
     </section>
 
-    <section class="content-section bg-primary text-white">
+    <section id="eventos" class="content-section bg-primary text-white">
       <div class="container text-center">
         <h2 class="mb-4">Eventos</h2>
-          <p>Texto</br>Texto</br>Texto</br>Texto</br>Texto</br>Texto</br></p>
+          <iframe class="calendar" src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;hl=pt_BR&amp;bgcolor=%233333ff&amp;src=josiascom2%40gmail.com&amp;color=%2329527A&amp;ctz=America%2FFortaleza" frameborder="0" scrolling="no"></iframe>
 
         <!--
         <a href="#" class="btn btn-xl btn-light mr-4">Click Me!</a>
