--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     <section id="eventos" class="content-section bg-primary text-white">
       <div class="container text-center">
         <h2 class="mb-4">Eventos</h2>
-          <iframe class="calendar" src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;hl=pt_BR&amp;bgcolor=%233333ff&amp;src=josiascom2%40gmail.com&amp;color=%2329527A&amp;ctz=America%2FFortaleza" frameborder="0" scrolling="no"></iframe>
+          <iframe class="calendar" src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showDate=0&amp;showPrint=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=josiascom2%40gmail.com&amp;color=%2329527A&amp;ctz=America%2FBahia" frameborder="0" scrolling="no"></iframe>
 
         <!--
         <a href="#" class="btn btn-xl btn-light mr-4">Click Me!</a>
