--- a/index.html
+++ b/index.html
@@ -5,17 +5,15 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Site da Associação Atlética de Ciências Exatas e Tecnológicas - UFRB">
-    <meta name="keywords" content="lobo azul, bcet, ufrb, atletica, atletica bcet, atletica universitaria, esporte universitario, liga bcet, liga universitaria">
+    <meta name="description" content="Associação Atlética de Ciências Exatas e Tecnológicas - UFRB">
+    <meta name="keywords" content="alcateia, atletica alcateia, lobo azul, bcet, ufrb, atletica, atletica bcet, atletica universitaria, esporte universitario, liga bcet, liga universitaria">
     <meta name="author" content="AAABCET">
 
-    <title>Associação Atlética de Ciências Exatas e Tecnológicas</title>
+    <!--  Titulo  -->
+    <title>Atlética Alcateia</title>
 
-    <!-- Favicon -->
-<!--
-    <link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
-  -->
-
+    <!--  Favicon  -->
+    <link rel="shortcut icon" href="img/favicon/favicon.png" type="image/x-icon">
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -38,7 +36,7 @@
     <nav id="sidebar-wrapper">
       <ul class="sidebar-nav">
         <li class="sidebar-brand">
-          <a class="js-scroll-trigger" href="#page-top">Lobo Azul</a>
+          <img style="height: 100%;" src="img/favicon/favicon.png">
         </li>
         <li class="sidebar-nav-item">
           <a class="js-scroll-trigger" href="#page-top">Inicio</a>
@@ -207,7 +205,7 @@
 
     <section id="eventos" class="content-section bg-primary text-white">
       <div class="container text-center">
-        <h2 class="mb-4">Eventos</h2>
+        <h2 class="mb-4">Calendário de Eventos</h2>
         <iframe class="calendar" src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showDate=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=josiascom2%40gmail.com&amp;color=%2329527A&amp;ctz=America%2FBahia" frameborder="0" scrolling="no"></iframe>
 
         <!--
