titulos e background do header

--- a/index.html
+++ b/index.html
@@ -64,15 +64,17 @@
 
     <!-- Header -->
     <header class="masthead d-flex">
-      <div class="container text-center my-auto">
-        <h1 class="mb-1">Stylish Portfolio</h1>
-        <h3 class="mb-5">
-          <em>A Free Bootstrap Theme by Start Bootstrap</em>
-        </h3>
-        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
-      </div>
-      <div class="overlay"></div>
-    </header>
+        <div
+     class="container text-center my-auto">
+          <h1 class="mb-1" style=" padding: 0px 100px 0px 250px; color:#000000; text-shadow: 5px 5px #A9BCF5;" >ATLÉTICA</h1>
+          <h1 class="mb-1" style=" padding:  0px 100px 0px 250px; color:#000000; text-shadow: 5px 5px #A9BCF5;" >ALCATEIA</h1>
+          <h3 class="mb-5" style=" padding: 0px 150px 0px 310px;"> Associoação Atlética Acadêmica de Bacharelado em Ciências Exatas e Tecnólogica da UFRB</h3>
+          </h3>
+          <div style=" padding: 100px 50px 0px 230px;">
+          <a class="btn btn-primary btn-xl js-scroll-trigger"  href="#about">Conheça-nos</a>
+        </div>
+        <div class="overlay" ></div>
+      </header>
 
 
     <section class="content-section bg-light" id="inscricao">
